# Freestyle

./: .gitignore  Cargo.toml  README.md  appveyor.yml  maps.txt
ci/: before_deploy.ps1
src/: main.rs
zeusFreestyle.Stratis/: initPlayerLocal.sqf  mission.sqm
